--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.2.9",
     "json-server": "^0.16.3",
     "react": "^17.0.2",
+    "react-chat-elements": "^10.15.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
